Fix width on mobile devices

--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -2,9 +2,12 @@ body {
 }
 
 #wrapper {
-   width: 20%;
-   left: 40%;
+   width: 30%;
    position: relative;
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+   min-width: 200px;
 }
 
 #id {
